syntax = "proto3";
package payments;

service PostsService {
  rpc Create(CreatePostRequest) returns (StatusResponse);
  rpc Find(FindPostRequest) returns (stream Post);
  rpc ListStream(Empty) returns (stream Post);
  rpc List(Empty) returns (Posts);
}

message Post {
  uint32 id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
  string author = 3;
}

message StatusResponse {
  bool success = 1;
  string message = 2;
}

message Posts { repeated Post posts = 1; }

message FindPostRequest { string query = 1; }

message Empty {}